@@ -363,3 +363,4 @@ Change list for PernMangband
 - Fortune cookie ported from PernA (by Mihi).
 - Bugfix on /dis. Added /untag.
 - Newbie(lv5-) no longer drops items when stealing fails.(thx Tanix)
+- 123 new cookies added.
